<resources>
    <string name="app_name">Backup Weekly Playlist For Spotify</string>
    <string name="app_description">Backup the Discover Weekly playlist of your Spotify account.</string>
    <string name="action_settings">Settings</string>

    <string name="com_spotify_sdk_redirect_scheme" translatable="false">myapp-eric</string>
    <string name="com_spotify_sdk_redirect_host" translatable="false">de.erichambuch.spotify.copyweekly</string>
    <string name="button_label">Copy playlist</string>
    <string name="status_start">Fetching user data&#8230;</string>
    <string name="status_searchplaylist">Searching playlist \"Weekly\"&#8230;</string>
    <string name="status_searchplaylist_continue">Continue searching playlist \"Weekly\"&#8230; #%s</string>
    <string name="status_gettracks">Reading tracks&#8230;</string>
    <string name="status_createplaylist">Creating new playlist&#8230;</string>
    <string name="status_copytracks">Copying tracks&#8230;</string>
    <string name="status_finish">Finished - Weekly playlist copied.</string>
    <string name="text_error_kein_user">Error: Cannot find user!</string>
    <string name="text_error_keine_tracks">Error: No tracks found in playlist!</string>
    <string name="text_error_keine_weekly_playlist">Error: No \"Discover Weekly\" found!</string>
    <string name="text_error_no_create_playlist">Error: Cannot create new playlist!</string>
    <string name="text_error_no_copy_tracks">Error: Cannot copy tracks!</string>
    <string name="notification_title">Backup Spotify Weekly</string>
    <string name="notification_text">Today you should back up your \"Discover Weekly\" playlist for Spotify</string>
    <string name="action_dataprotection">Data privacy</string>
    <string name="url_dataprotection" translatable="false">https://sites.google.com/site/erichambuch/dataprotection</string>
    <string name="text_license"><![CDATA[<p>Written in 2020 by Eric Hambuch</p>\n<p>This app makes use of the official <a href="http://developer.spotify.com">Spotify Developer API</a> according to the Spotify Developer <a href="https://developer.spotify.com/terms/">Terms of Service.</a></p>\n<p>Additional licenses: <a href="https://material.io/">Material IO</a> and OkHttp library under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 license</a>.</p><br/><p>Feedback is welcome by email to <a href="mailto:erichambuch+apps@googlemail.com">erichambuch+apps@googlemail.com</a>. <a href="app://de.erichambuch.spotify.kontakt">More contact data</a></p>]]></string>
    <string name="text_error_msg">Error</string>
    <string name="prefs_notification_title">Notification on Sunday</string>
    <string name="prefs_notification_summary">Display a notification to perform your backup on every Sunday evening</string>
    <string name="text_error_authenticate">Please log in to Spotify first</string>
    <string name="action_about">Contact/About&#8230;</string>
    <string name="button_openplaylist">Open playlist</string>
    <string name="text_copyof">Copy of Weekly</string>
    <string name="text_error_no_internet">Please enable network connection</string>
    <string name="text_info_authokay">Login to Spotify successful</string>
    <string name="text_spotify_logo" translatable="false">Spotify Logo</string>
    <string name="action_osslicenses">OSS Licenses&#8230;</string>
    <string name="prefs_authentication_title">Use Spotify App Authentication</string>
    <string name="prefs_authentication_summary">Either use the Authentication of your installed Spotify App or switch back to a web-based logon form</string>
    <string name="button_login">Login</string>
    <string name="cancel">Cancel</string>
</resources>
