<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.erichambuch.spotify.copyweekly.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dataprotection"
        android:orderInCategory="300"
        android:title="@string/action_dataprotection"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_showosslicenses"
        android:orderInCategory="400"
        android:title="@string/action_osslicenses"
        app:showAsAction="never" />
</menu>
